# muffin-lord

./: .gitignore  CLAUDE.md  equibase_download.py  main.py  predict.csv  predict.yaml  pyproject.toml  schema.py  tags_selector.json
datasets/: datasets_goes_here.txt
muffin_horsey/: feature_generator.py  feature_processor.py  sample_predict.yaml  sample_training.yaml
muffin_horsey/models/: loss_fn.py  race_aware_config.py  race_aware_datamodule.py  race_aware_dataset.py  race_aware_transformer.py  transformers.py
