[project]
name = "muffin-horsey"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "blinker>=1.9.0",
    "playwright>=1.52.0",
    "polars>=1.30.0",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "selenium-wire>=5.1.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
