[project]
name = "muffin-horsey"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "playwright>=1.52.0",
    "polars>=1.30.0",
    "pytorch-tabular",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv.sources]
pytorch-tabular = { git = "https://github.com/manujosephv/pytorch_tabular", rev = "main" }
